--- a/style.css
+++ b/style.css
@@ -22,12 +22,18 @@ html {
     padding: 2rem 2rem;
     text-align: center;
     justify-content: center;
-    height: 60%;
+    height: 50%;
 }
 
-/* .logo{
-    
-} */
+.logocontainer{
+    display: flex;
+    padding-bottom: 10px;
+    justify-content: center;
+}
+
+.logo{
+    max-width: 100px;
+}
 
 .hero-content {
     max-width: 900px;
@@ -71,7 +77,8 @@ html {
     background: rgba(255, 255, 255, 0.1);
     padding: 1.5rem;
     border-radius: 8px;
-    margin: 2rem 0;
+    /* margin: 1rem 0rem 1.5rem 0rem; */
+    /* margin: 2rem 0; */
 }
 
 .light-section .highlight h4 {
